--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "kernel"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "kernel"
+path = "./src/kernel.rs"
+crate-type = ["staticlib"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
